--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Top Navbar -->
   <header class="navbar">
     <div class="logo">DLASI STORE</div>
     <div class="menu-toggle" onclick="toggleMenu()">
@@ -34,7 +33,6 @@
       <ion-icon name="bag-handle-outline"></ion-icon>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div>
         <h1>YOUTH CULTURE. DLASI DRIP</h1>
@@ -42,9 +40,7 @@
     </div>
   </section>
 
-  <!-- Main Content Area -->
   <div class="main-container">
-    <!-- Sidebar -->
     <aside class="sidebar">
       <h3>Contact</h3>
       <p>Email: contact@dlasistore.com</p>
@@ -56,13 +52,10 @@
       <iframe src="https://www.google.com/maps/embed?..." width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </aside>
 
-    <!-- Main Section -->
     <main class="main-section">
-      <!-- Category 1: Product Cards -->
       <section id="women" class="category">
         <h2>Popular Products</h2>
         <div class="card-grid">
-          <!-- Repeat this card 10 times -->
           <div class="card">
             <img src="images/27405a9653c3ec647b5584816c1470ae.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -272,11 +265,9 @@
                 <option value="">XXXL</option>
               </select>
             </div>          </div>
-          <!-- Repeat as needed -->
         </div>
       </section>
 
-      <!-- Category 2: Image + Description -->
       <section class="category highlight">
         <div class="highlight-content">
           <div>
@@ -288,11 +279,9 @@
         </div>
       </section>
 
-      <!-- Category 3: New Arrivals -->
       <section  class="category">
         <h2 id="sneakers">New Arrivals</h2>
         <div class="card-grid">
-          <!-- Repeat this card 10 times -->
           <div class="card">
             <img src="images/d1a2620743f81fde9ef8442ae90f65e1.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
@@ -329,45 +318,50 @@
             <p class="description">New trendy fashion wear just arrived!</p>
             <p class="price">$34.99</p>
           </div>
-          <div class="card">
-            <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <div class="card">
-            <img src="images/d08303354546c1d1eb94425d6ad5dbbf.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <div class="card">
-            <img src="images/ee7c3cdd9cd5b5088a952f29d3799c8b.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <div class="card">
-            <img src="images/6d9794131e95210b0f3d20ed67bafa77.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <div class="card">
-            <img src="images/0cb197d037b528411a4938c4186e06cc.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <div class="card">
-            <img src="images/6c6df19a55822829308b37229f008df2.png" alt="New Product" />
-            <p class="brief">Fresh Look</p>
-            <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
-          </div>
-          <!-- Repeat as needed -->
+         
         </div>
       </section>
+      <section class="category">
+      <p id="men">men sports wears</p>
+        <div class="card-grid">
+            <div class="card">
+                <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/d08303354546c1d1eb94425d6ad5dbbf.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/ee7c3cdd9cd5b5088a952f29d3799c8b.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/6d9794131e95210b0f3d20ed67bafa77.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/0cb197d037b528411a4938c4186e06cc.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/6c6df19a55822829308b37229f008df2.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+        </div>
+        </section>
     </main>
   </div>
 
