--- a/index.html
+++ b/index.html
@@ -321,47 +321,49 @@
          
         </div>
       </section>
-      <section class="category">
-      <p id="men">men sports wears</p>
-        <div class="card-grid">
-            <div class="card">
-                <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-            <div class="card">
-                <img src="images/d08303354546c1d1eb94425d6ad5dbbf.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-            <div class="card">
-                <img src="images/ee7c3cdd9cd5b5088a952f29d3799c8b.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-            <div class="card">
-                <img src="images/6d9794131e95210b0f3d20ed67bafa77.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-            <div class="card">
-                <img src="images/0cb197d037b528411a4938c4186e06cc.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-            <div class="card">
-                <img src="images/6c6df19a55822829308b37229f008df2.png" alt="New Product" />
-                <p class="brief">Fresh Look</p>
-                <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
-            </div>
-        </div>
-        </section>
+       
+            <section class="category">
+                <h2 id="new-arrivals">NEW ARRIVALS</h2>
+                <h2 id="men">men sports wears</h2>
+                  <div class="card-grid">
+                      <div class="card">
+                          <img src="images/7d7d683473eded3c37211111a69586f5.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                      <div class="card">
+                          <img src="images/7c15a4281a3f99ff3083ef3133fcd5ac.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                      <div class="card">
+                          <img src="images/c7c8812a5bd19ba9f6cb971ea4d64069.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                      <div class="card">
+                          <img src="images/aa1fe348b2a98e99b7deaa14cac641f3.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                      <div class="card">
+                          <img src="images/b55944edb4b02d8253f20f174110d881.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                      <div class="card">
+                          <img src="images/364e88bc84114cf7ad131775cb93370b.png" alt="New Product" />
+                          <p class="brief">Fresh Look</p>
+                          <p class="description">New trendy fashion wear just arrived!</p>
+                          <p class="price">$34.99</p>
+                      </div>
+                  </div>
+                  </section>
     </main>
   </div>
 
