--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h3>Location</h3>
       <p>123 Fashion Ave, Style City</p>
       <h3>Map</h3>
-      <iframe src="https://www.google.com/maps/embed?..." width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d254079.44355118545!2d-0.3232430586848833!3d5.714388313156143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf997de167c9f3%3A0x9845db7926766c25!2sMadina%20Market!5e0!3m2!1sen!2skw!4v1745248036679!5m2!1sen!2skw" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    
     </aside>
 
     <main class="main-section">
