--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
       </section>
 
       <section  class="category">
-        <h2 id="sneakers">New Arrivals</h2>
+        <h2 id="sneakers">SNEAKERS</h2>
         <div class="card-grid">
           <div class="card">
             <img src="images/d1a2620743f81fde9ef8442ae90f65e1.png" alt="New Product" />
@@ -321,6 +321,47 @@
          
         </div>
       </section>
+      <section class="category">
+      <h2 id="men">men sports wears</h2>
+        <div class="card-grid">
+            <div class="card">
+                <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/d08303354546c1d1eb94425d6ad5dbbf.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/ee7c3cdd9cd5b5088a952f29d3799c8b.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/6d9794131e95210b0f3d20ed67bafa77.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/0cb197d037b528411a4938c4186e06cc.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+            <div class="card">
+                <img src="images/6c6df19a55822829308b37229f008df2.png" alt="New Product" />
+                <p class="brief">Fresh Look</p>
+                <p class="description">New trendy fashion wear just arrived!</p>
+                <p class="price">$34.99</p>
+            </div>
+        </div>
+        </section>
        
             <section class="category">
                 <h2 id="new-arrivals">NEW ARRIVALS</h2>
