--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/853c760f90232b9fc83eb82eceb9269c.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -145,7 +146,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/fcef29809a2762e9d06ae3e5a4c01d87.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -162,7 +164,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/330a54492e4c26d18fc0336ed8549055.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -179,7 +182,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>        
+          </div>
           <div class="card">
             <img src="images/c42f6f2c4c89ef683c7a37e2e76e2e11.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -196,7 +200,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/ef8328e2736f38032ac761d43aae7622.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -213,7 +218,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/64c7b289ecdafe3d7afc4a6ede5ef6f6.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -230,7 +236,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>        
+          </div>
           <div class="card">
             <img src="images/92839e5ef6d3caf139777cd78d7a31eb.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -247,7 +254,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
           <div class="card">
             <img src="images/87fe87af2dfb64c65a70fc18cc14f2f2.png" alt="Product" />
             <p class="brief">Nice Shirt</p>
@@ -264,7 +272,8 @@
                 <option value="">XXL</option>
                 <option value="">XXXL</option>
               </select>
-            </div>          </div>
+            </div>         
+          </div>
         </div>
       </section>
 
@@ -286,37 +295,109 @@
             <img src="images/d1a2620743f81fde9ef8442ae90f65e1.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+            <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>     
           </div>
           <div class="card">
             <img src="images/185c0eb6ee7683f3329edf87f2dfe8de.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+<div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>            
           </div>
           <div class="card">
             <img src="images/56ad33ba4fa2f3de899b9c0a653805a9.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+            <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>     
           </div>
           <div class="card">
             <img src="images/047d02f5867e7a948d46da51567d8566.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+            <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>     
           </div>
           <div class="card">
             <img src="images/085d296dcd6dc2589069388911a25a03.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+            <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>     
           </div>
           <div class="card">
             <img src="images/6d0501941273b8d3582b1211ca4da39d.png" alt="New Product" />
             <p class="brief">Fresh Look</p>
             <p class="description">New trendy fashion wear just arrived!</p>
-            <p class="price">$34.99</p>
+            <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">S</option>
+                <option value="">M</option>
+                <option value="">L</option>
+                <option value="">XL</option>
+                <option value="">XXL</option>
+                <option value="">XXXL</option>
+              </select>
+            </div>     
           </div>
          
         </div>
@@ -328,37 +409,109 @@
                 <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
             <div class="card">
                 <img src="images/d08303354546c1d1eb94425d6ad5dbbf.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
             <div class="card">
                 <img src="images/ee7c3cdd9cd5b5088a952f29d3799c8b.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
             <div class="card">
                 <img src="images/6d9794131e95210b0f3d20ed67bafa77.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
             <div class="card">
                 <img src="images/0cb197d037b528411a4938c4186e06cc.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
             <div class="card">
                 <img src="images/6c6df19a55822829308b37229f008df2.png" alt="New Product" />
                 <p class="brief">Fresh Look</p>
                 <p class="description">New trendy fashion wear just arrived!</p>
-                <p class="price">$34.99</p>
+                <div class="price-size">
+              <p class="price">ghc:250</p>
+              <!-- <label for="size">size</label> -->
+              <select name="" id="">
+                <option value="">Size</option>
+                <option value="">38</option>
+                <option value="">40</option>
+                <option value="">42</option>
+                <option value="">43</option>
+                <option value="">44</option>
+                <option value="">45</option>
+              </select>
+            </div>     
             </div>
         </div>
         </section>
