--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <main class="main-section">
       <section id="women" class="category">
-        <h2>Popular Products</h2>
+        <h2><u>WOMEN COLLECTION </u></h2>
         <div class="card-grid">
           <div class="card">
             <img src="images/27405a9653c3ec647b5584816c1470ae.png" alt="Product" />
@@ -289,7 +289,7 @@
       </section>
 
       <section  class="category">
-        <h2 id="sneakers">SNEAKERS</h2>
+        <h2 id="sneakers"><u>SNEAKERS</u></h2>
         <div class="card-grid">
           <div class="card">
             <img src="images/d1a2620743f81fde9ef8442ae90f65e1.png" alt="New Product" />
@@ -402,7 +402,7 @@
         </section>
       
       <section class="category">
-      <h2 id="men">men sports wears</h2>
+      <h2 id="men"><u>MEN SPORTS WEAR </u></h2>
         <div class="card-grid">
             <div class="card">
                 <img src="images/27687e6172e08618b5207e727a8a0d2b.png" alt="New Product" />
@@ -516,7 +516,7 @@
         </section>
        
             <section class="category">
-                <h2 id="new-arrivals">NEW ARRIVALS</h2>
+                <h2 id="new-arrivals"><u>NEW ARRIVALS</u></h2>
                   <div class="card-grid">
                       <div class="card">
                           <img src="images/7d7d683473eded3c37211111a69586f5.png" alt="New Product" />
